--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ li{
     color: red;
 }
 
+/* card */
+.ms_card{
+    border: 2px solid lightgrey;
+}
 /* immagine hotel */
 .immagine-hotel{
     position: relative;
@@ -85,19 +89,22 @@ h2{
 .discount{
     font-size: 25px;
 }
-.prezzo a{
-    color: rgba(0, 0, 0, 0.7);
-}
 /* bottone offerta */
-.ms-btn{
+.bottone-offerta{
+    background-color: #ffc107;
     border-radius: 10px;
+    height: 40px;
+    width: 150px;
+    text-align: center;
+    padding: 8px 0;
+    font-weight: 600;
 }
 /* plus offerta */
 .plus-offerta{
     margin-top: 10px;
 }
 .plus-offerta .bold{
-    font-size: 19px;
+    font-size: 18px;
 }
 /* lista siti */
 .lista-siti{
@@ -105,6 +112,11 @@ h2{
 }
 .sito{
     color: rgba(0, 0, 0, 0.7);
+}
+.sito i{
+    transform: rotate(45deg);
+    font-size: 12px;
+    vertical-align: text-top;
 }
 .lista-siti .full-price{
     text-decoration: none;
@@ -143,10 +155,11 @@ h2{
         display: flex;
     }
     .ms_flex{
-        display: block;
-        text-align: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
-    .nascosto{
+    .small-nascosto{
         display: block;
     }
     /* prezzi */
@@ -164,6 +177,9 @@ h2{
         order: 2;
         width: 20%;
         border-right: 1px dotted grey;
+    }
+    .bottone-offerta{
+        margin-top: 10px;
     }
     .full-price{
         font-size: 25px;
